Expose incident reports in UI
